--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -15,7 +15,7 @@
 <link href="{{ site.baseurl }}/assets/css/non-responsive/non-responsive.css" rel="stylesheet">
 {% endif %}
 {% if page.slug == "examples" %}
-<!-- <link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet"> -->
+<link href="{{ site.baseurl }}/dist/css/ku-gridboxes.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/dist/css/multiple-select.min.css" rel="stylesheet">
 <link href="{{ site.baseurl }}/dist/css/datatables.min.css" rel="stylesheet">
 {% endif %}
@@ -43,7 +43,7 @@
 <!-- //Documentation extras - not for production -->
 {% endif %}
 {% if page.slug == "examples" %}
-<!-- <link href="../../dist/css/ku-gridboxes.css" rel="stylesheet"> -->
+<link href="../../dist/css/ku-gridboxes.css" rel="stylesheet">
 <link href="../../assets/css/multiple-select/multiple-select.css" rel="stylesheet">
 <link href="../../assets/css/datatables/datatables.css" rel="stylesheet">
 {% endif %}
