--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -69,5 +69,5 @@
 //@import "ku-slickslider.less";
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
-@import "ku-gridboxes-bootstrap.less"; // Extra gridbox styling for Bootstrap templates
+//@import "ku-gridboxes-bootstrap.less";
 @import "ku-misc.less";
