--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -30,6 +30,7 @@
     left: 83px;
     bottom: 18px;
     letter-spacing: 0.936px;
+    padding-right: 10px;
 
     .ku-branding-text-major {
       font-size: 1.1em;
