--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -4,414 +4,289 @@
 // --------------------------------------------------
 
 .gridbox {
-  .theme-faelles & {
-    &.faculty_color {
-      &.text-down {
-        .header {
-          background: fade(@ku-red, 83%)!important;
-          color: @white-color;
-        }
-      }
+  &.faculty_color {
+    background: @ku-red;
+    color: @white-color;
 
-      &.text-top {
-        .header {
-          background: @ku-red;
-        }
-      }
+    .header {
+      background: fade(@ku-red, 83%);
+      color: @white-color;
+    }
 
-      &.outlined {
-        border: 1px solid @ku-red;
-        color: @ku-red!important;
-
-        &::before {
-          color: @ku-red;
-        }
-
-        &:hover {
-          background: @ku-gray-hover!important;
-          border: 1px solid @ku-red-hover;
-        }
-
-        &.with-img {
-          &:hover {
-            background: @ku-gray-hover!important;
-            border: 1px solid @ku-red-hover;
-          }
-        }
-      }
-
-      &.full {
+    &.text-top {
+      .header {
         background: @ku-red;
-        color: @white-color;
-
-        &:hover {
-          background: @ku-red-hover!important;
-        }
-      }
-
-      &.text-down {
-        &:hover {
-          background: @ku-red-hover!important;
-        }
       }
     }
 
-    &.subcolor_1 {
-      &.text-down {
-        .header {
-          background: fade(@blue, 83%);
-          color: @white-color;
-        }
+    &.outlined {
+      border: 1px solid @ku-red;
+      color: @ku-red;
+
+      &:hover {
+        background: @ku-gray-hover;
+        border: 1px solid @ku-red-hover;
       }
+    }
 
-      &.text-top {
-        .header {
-          background: @blue;
-          color: @white-color;
-        }
+    &.full {
+      &:hover {
+        background: @ku-red-hover;
       }
+    }
 
-      &.outlined {
-        border: 1px solid @blue;
-        color: @blue!important;
-
-        &::before {
-          color: @blue;
-        }
-
-        &:hover {
-          background: @ku-gray-hover!important;
-          border: 1px solid @blue-hover;
-        }
-
-        &.with-img {
-          &:hover {
-            background: @ku-gray-hover!important;
-            border: 1px solid @blue-hover;
-          }
-        }
+    &.text-down {
+      &:hover {
+        background: @ku-red-hover;
       }
+    }
+  }
 
-      &.full {
+  &.subcolor_1 {
+    background: @blue;
+    color: @white-color;
+
+    .header {
+      background: fade(@blue, 83%);
+      color: @white-color;
+    }
+
+    &.text-top {
+      .header {
         background: @blue;
         color: @white-color;
-
-        &:hover {
-          background: @blue-hover!important;
-        }
-      }
-
-      &.text-down {
-        &:hover {
-          background: @blue-hover!important;
-        }
       }
     }
 
-    &.subcolor_2 {
-      &.text-down {
-        .header {
-          background: fade(@green, 83%);
-          color: @white-color;
-        }
+    &.outlined {
+      border: 1px solid @blue;
+      color: @blue;
+
+      &:hover {
+        background: @ku-gray-hover;
+        border: 1px solid @blue-hover;
       }
+    }
 
-      &.text-top {
-        .header {
-          background: @green;
-          color: @white-color;
-        }
+    &.full {
+      &:hover {
+        background: @blue-hover;
       }
+    }
 
-      &.outlined {
-        border: 1px solid @green;
-        color: @green!important;
-
-        &::before {
-          color: @green;
-        }
-
-        &:hover {
-          background: @ku-gray-hover!important;
-          border: 1px solid @green-hover;
-        }
-
-        &.with-img {
-          &:hover {
-            background: @ku-gray-hover!important;
-            border: 1px solid @green-hover;
-          }
-        }
+    &.text-down {
+      &:hover {
+        background: @blue-hover;
       }
+    }
+  }
 
-      &.full {
+  &.subcolor_2 {
+    background: @green;
+    color: @white-color;
+
+    .header {
+      background: fade(@green, 83%);
+      color: @white-color;
+    }
+
+    &.text-top {
+      .header {
         background: @green;
         color: @white-color;
-
-        &:hover {
-          background: @green-hover!important;
-        }
-      }
-
-      &.text-down {
-        &:hover {
-          background: @green-hover!important;
-        }
       }
     }
 
-    &.subcolor_3 {
-      &.text-down {
-        .header {
-          background: fade(@ku-darkgray, 83%);
-          color: @white-color;
-        }
+    &.outlined {
+      border: 1px solid @green;
+      color: @green;
+
+      &:hover {
+        background: @ku-gray-hover;
+        border: 1px solid @green-hover;
       }
+    }
 
-      &.text-top {
-        .header {
-          background: @ku-darkgray;
-          color: @white-color;
-        }
+    &.full {
+      &:hover {
+        background: @green-hover;
       }
+    }
 
-      &.outlined {
-        border: 1px solid @ku-darkgray;
-        color: @ku-gridbox-text!important;
-
-        &::before {
-          color: @ku-gridbox-text;
-        }
-
-        &:hover {
-          background: @ku-gray-hover;
-          border: 1px solid @ku-darkgray-hover!important;
-        }
-
-        &.with-img {
-          &:hover {
-            background: @ku-gray-hover!important;
-            border: 1px solid @ku-gray-hover;
-          }
-        }
+    &.text-down {
+      &:hover {
+        background: @green-hover;
       }
+    }
+  }
 
-      &.full {
+  &.subcolor_3 {
+    background: @ku-darkgray;
+    color: @white-color;
+
+    .header {
+      background: fade(@ku-darkgray, 83%);
+      color: @white-color;
+    }
+
+    &.text-top {
+      .header {
         background: @ku-darkgray;
         color: @white-color;
+      }
+    }
 
-        &:hover {
-          background: @ku-darkgray-hover!important;
+    &.outlined {
+      border: 1px solid @ku-darkgray;
+      color: @ku-gridbox-text;
+
+      &:hover {
+        background: @ku-gray-hover;
+        border: 1px solid @ku-darkgray-hover;
+      }
+    }
+
+    &.full {
+      &:hover {
+        background: @ku-darkgray-hover;
+      }
+    }
+
+    &.text-down {
+      &:hover {
+        background: @ku-darkgray-hover;
+      }
+    }
+  }
+
+  &.subcolor_4 {
+    background: @ku-darkblue;
+    color: @white-color;
+
+    .header {
+      background: fade(@ku-darkblue, 83%);
+      color: @white-color;
+    }
+
+    &.text-top {
+      .header {
+        color: @white-color;
+        background: @ku-darkblue;
+      }
+    }
+
+    &.outlined {
+      border: 1px solid @ku-darkblue;
+      color: @ku-darkblue;
+
+      &:hover {
+        background: @ku-gray-hover;
+        border: 1px solid @ku-darkblue-hover;
+      }
+    }
+
+    &.full {
+      &:hover {
+        background: @ku-darkblue-hover;
+      }
+    }
+
+    &.text-down {
+      &:hover {
+        background: @ku-darkblue-hover;
+      }
+    }
+  }
+}
+@media (min-width: @screen-xs-min) {
+  // Outline arrow style for multiple column spans
+  .one-one-two-column .column2,
+  .one-two-column .column2,
+  .single-column .column1,
+  .two-one-column .column1,
+  .two-one-one-column .column1 {
+    .gridbox {
+      &.outlined {
+        &.faculty_color {
+          &::before {
+            color: @ku-red;
+          }
+        }
+
+        &.subcolor_1 {
+          &::before {
+            color: @blue;
+          }
+        }
+
+        &.subcolor_2 {
+          &::before {
+            color: @green;
+          }
         }
 
         &.subcolor_3 {
           &::before {
-            color: @white-color;
-          }
-        }
-      }
-
-      &.text-down {
-        &:hover {
-          background: @ku-darkgray-hover!important;
-        }
-      }
-    }
-
-    &.subcolor_4 {
-      color: @white-color;
-
-      &.text-down {
-        .header {
-          background: fade(@ku-darkblue, 83%);
-          color: @white-color;
-        }
-      }
-
-      &.text-top {
-        .header {
-          color: @white-color;
-          background: @ku-darkblue;
-        }
-      }
-
-      &.outlined {
-        border: 1px solid @ku-darkblue;
-        color: @ku-darkblue!important;
-
-        &::before {
-          color: @ku-darkblue;
-        }
-
-        &:hover {
-          background: @ku-gray-hover!important;
-          border: 1px solid @ku-darkblue-hover;
-        }
-
-        &.with-img {
-          &:hover {
-            background: @ku-gray-hover!important;
-            border: 1px solid @ku-darkblue-hover;
-          }
-        }
-      }
-
-      &.full {
-        background: @ku-darkblue;
-
-        &:hover {
-          background: @ku-darkblue-hover!important;
-        }
-      }
-
-      &.text-down {
-        &:hover {
-          background: @ku-darkblue-hover!important;
-        }
-      }
-    }
-  }
-}
-// full width and 2/3 columns
-
-@media only screen and (min-width: @screen-xs-min) and (max-width: @screen-sm-max) {
-  .size2,
-  .size3 {
-    &.with-img {
-      .theme-faelles & {
-        color: @white-color;
-
-        &.faculty_color {
-          background: @ku-red;
-        }
-
-        &.subcolor_1 {
-          background: @blue;
-        }
-
-        &.subcolor_2 {
-          background: @green;
-        }
-
-        &.subcolor_3 {
-          background: @ku-darkgray;
-          color: @ku-gridbox-text;
-        }
-
-        &.subcolor_4 {
-          background: @ku-darkblue;
-        }
-      }
-    }
-  }
-}
-// Outline style
-
-.EncyclopediaEntry,
-.HTML,
-.Standard,
-.double-column [class*=column],
-.one-two-column .column1,
-.quad-column [class*=column],
-.rightbox-normal,
-.triple-column [class*=column],
-.two-one-column .column2 {
-  .size2,
-  .size3 {
-    &.outlined.with-img {
-      .theme-faelles & {
-        &.faculty_color {
-          .header {
-            background: fade(@ku-red, 83%);
-            color: @white-color;
-          }
-        }
-
-        &.subcolor_1 {
-          .header {
-            background: fade(@blue, 83%);
-            color: @white-color;
-          }
-        }
-
-        &.subcolor_2 {
-          .header {
-            background: fade(@green, 83%);
-            color: @white-color;
-          }
-        }
-
-        &.subcolor_3 {
-          .header {
-            background: fade(@ku-darkgray, 83%);
-            color: @white-color;
+            color: @ku-darkgray;
           }
         }
 
         &.subcolor_4 {
-          .header {
-            background: fade(@ku-darkblue, 83%);
-            color: @white-color;
+          &::before {
+            color: @ku-darkblue;
           }
         }
       }
     }
   }
 }
-@media only screen and (min-width: 870px) {
-  // Large desktop arrow style for outlined with image
+@media (min-width: @screen-md-min) {
+  // Outline style for multiple column spans
   .double-column [class*=column],
   .one-two-column .column1,
+  .quad-column [class*=column],
+  .rightbox-normal,
   .triple-column [class*=column],
   .two-one-column .column2 {
-    .size2,
-    .size3 {
-      &.with-img {
-        &.outlined {
-          .theme-faelles & {
-            &::before {
+    .gridbox {
+      &.size2,
+      &.size3 {
+        &.outlined.with-img {
+          border: 0;
+
+          &.faculty_color {
+            .header {
+              background: fade(@ku-red, 83%);
               color: @white-color;
             }
           }
-        }
-      }
-    }
-  }
-}
-@media only screen and (min-width: 460px) and (max-width: 869px) {
-  // All single, 2/3 and double comlumn boxes with image
-  .double-column [class*=column],
-  .one-one-two-column .column1,
-  .one-one-two-column .column2,
-  .one-three-column .column1,
-  .one-two-column .column1,
-  .triple-column [class*=column],
-  .two-one-column .column2,
-  .two-one-one-column .column2,
-  .two-one-one-column .column3 {
-    .size2,
-    .size3 {
-      &.with-img {
-        .theme-faelles & {
-          &.faculty_color {
-            background: @ku-red;
-          }
 
           &.subcolor_1 {
-            background: @blue;
+            .header {
+              background: fade(@blue, 83%);
+              color: @white-color;
+            }
           }
 
           &.subcolor_2 {
-            background: @green;
+            .header {
+              background: fade(@green, 83%);
+              color: @white-color;
+            }
           }
 
           &.subcolor_3 {
-            background: @ku-darkgray;
-            color: @ku-gridbox-text;
+            .header {
+              background: fade(@ku-darkgray, 83%);
+              color: @white-color;
+            }
           }
 
           &.subcolor_4 {
-            background: @ku-darkblue;
+            .header {
+              background: fade(@ku-darkblue, 83%);
+              color: @white-color;
+            }
           }
         }
       }
